--- a/Game/Game.cbp
+++ b/Game/Game.cbp
@@ -54,6 +54,8 @@
 			<Add directory="E:/Programming_Libraries/SFML-2.4.2/lib" />
 			<Add directory="E:/Programming_Libraries/GLEW 2.0 and GLM/glew-2.0.0/lib/Release/Win32" />
 		</Linker>
+		<Unit filename="Data/Shaders/Simple_Fragment.glsl" />
+		<Unit filename="Data/Shaders/Simple_Vertex.glsl" />
 		<Unit filename="Game.cbp" />
 		<Unit filename="Source/Application.cpp" />
 		<Unit filename="Source/Application.h" />
@@ -65,10 +67,14 @@
 		<Unit filename="Source/Shader/Shader_Control.h" />
 		<Unit filename="Source/Shader/Shader_Loader.cpp" />
 		<Unit filename="Source/Shader/Shader_Loader.h" />
+		<Unit filename="Source/Shader/Simple_Shader.cpp" />
+		<Unit filename="Source/Shader/Simple_Shader.h" />
 		<Unit filename="Source/States/Game_State.cpp" />
 		<Unit filename="Source/States/Game_State.h" />
 		<Unit filename="Source/States/Playing.cpp" />
 		<Unit filename="Source/States/Playing.h" />
+		<Unit filename="Source/Texture/Texture.cpp" />
+		<Unit filename="Source/Texture/Texture.h" />
 		<Unit filename="Source/main.cpp" />
 		<Unit filename="glew32.dll" />
 		<Unit filename="openal32.dll" />
